# acsh

./: README.md
backend/: .gitignore  env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: bulk.py  chat.py
backend/app/core/: config.py
backend/app/core/langgraph/: agent.py  classifier.py
backend/app/core/langgraph/prompts/: manager.py  templates.py
backend/app/core/langgraph/tools/: document_search_tool.py
backend/app/dependencies/: agent.py  classifier.py  config.py
backend/app/models/: __init__.py  chat.py  search.py
frontend/: .env.local  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/chat/: chat-message.tsx
frontend/components/common/: footer.tsx  logo.tsx  navbar.tsx  theme-toggle.tsx
frontend/components/custom/: question-card.tsx
frontend/components/ui/: resizable-navbar.tsx
frontend/styles/: globals.css
scripts/: README.md
scripts/ingestion/: ingest_to_pinecone.py
scripts/scraping/: atlan_docs_crawler.py  config.py  content_chunker.py  content_extractor.py  crawler_utils.py  requirements.txt  retry_failed_urls.py  sitemap_parser.py
